;;;; -*- coding: utf-8; fill-column: 78 -*-
changes in sbcl-1.0.27 relative to 1.0.26:
  * new port: support added for x86-64 OpenBSD. (thanks to Josh Elsasser)
  * bug fix: a type error is signaled for attempts to use the LOOP
    keyword ACROSS for a NIL value. (thanks to Daniel Lowe)
  * bug fix: fix gc related interrupt handling bug on ppc (regression from
    1.0.25.37, reported by Harald Hanche-Olsen)
  * bug fix: work around signal delivery bug in darwin (regression from
    1.0.25.44, reported by Sidney Markowitz)

changes in sbcl-1.0.26 relative to 1.0.25:
  * incompatible change: an interruption (be it a function passed to
    INTERRUPT-THREAD or a timer function) runs in an environment where
    interrupts can be enabled. The interruption can use
    WITH-INTERRUPTS or WITHOUT-INTERRUPTS as it sees fit. Use
    WITHOUT-INTERRUPTS to avoid nesting of interruptions and
    potentially running out of stack. Keep in mind that in the absence
    of WITHOUT-INTERRUPTS some potentially blocking operation such as
    acquiring a lock can enable interrupts.
  * incompatible change: GC-OFF and GC-ON are removed, as they were
    always unsafe. Use WITHOUT-GCING instead.
  * new feature: runtime option --disable-ldb
  * new feature: runtime option --lose-on-corruption to die at the
    slightest hint of possibly non-recoverable errors: running out of
    memory, stack, alien stack, binding stack, encountering a memory
    fault, etc. In the absence of --lose-on-corruption a warning is
    printed to stderr.
  * enhancement: detect binding stack exhaustion
  * enhancement: detect alien stack exhaustion on x86/x86-64
  * improvement: generally more stable and reliable interrupt handling
  * improvement: there is a per thread interruption queue,
    interruptions are executed in order of arrival
  * improvement: a repeating timer reschedules itself when the it has
    finished, but expiration times are spaced equally. If an