@@ -207,6 +207,7 @@ code:
                         "-D_FILE_OFFSET_BITS=64")
                       #+(and x86-64 darwin)
                       '("-arch" "x86_64")
+                      #+(and x86-64 sunos) '("-m64")
                       (list "-o"
                             (namestring tmp-a-dot-out)
                             (namestring tmp-c-source)))
