@@ -2,6 +2,7 @@
 #define _SPARC_SOLARIS_OS_H
 
 typedef ucontext_t os_context_t;
+typedef int os_context_register_t ;
 
 static inline os_context_t *arch_os_get_context(void **void_context)
 {
